--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:cqWsJpkt0BL2fsZ+A0dL+PxnQGwAGJttKjnXPw20FX4=
+APP_KEY=base64:c+ymwImocXBBHFKXmHQyNBZxcR0PU7qSHWRsQV7sEdM=
 APP_DEBUG=true
-APP_URL=http://masjakidpuprblora.co.id
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,16 +11,15 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=u123385283_sipjakiblora
-# DB_USERNAME=root
-DB_USERNAME=u123385283_sipjakiblora
-# DB_PASSWORD=
-DB_PASSWORD=Sipjakiblora123
+DB_DATABASE=sipjakikbbpermen
+DB_USERNAME=root
+DB_PASSWORD=mysql123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
+# SESSION_DRIVER=filer
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -60,9 +59,16 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-# PENAMBAHAN DATA CODE
-VITE_DEV_SERVER=true
+CLOUDINARY_URL=cloudinary://729783839544451:QjfNvnKkXJU_EDbjILemxSNkTUY@dgttedzxe
+CLOUDINARY_CLOUD_NAME=dgttedzxe
+CLOUDINARY_API_KEY=729783839544451
+CLOUDINARY_API_SECRET=QjfNvnKkXJU_EDbjILemxSNkTUY
 
-
-FILESYSTEM_DISK = public
-FILESYSTEM_DRIVER = public
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=abgblorabangunangedung@gmail.com
+MAIL_PASSWORD=bduqtprjuayrawii
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=abgblorabangunangedung@gmail.com
+MAIL_FROM_NAME="MASJAKI BLORA"
