--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "cloudinary-labs/cloudinary-laravel": "^2.3",
         "dompdf/dompdf": "^3.0",
         "fakerphp/faker": "^1.23",
         "guzzlehttp/guzzle": "^7.2",
@@ -13,6 +14,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "league/flysystem": "^3.0",
         "nesbot/carbon": "^2.72"
     },
     "require-dev": {
